--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,13 +32,17 @@ dependencies:
   audioplayers: ^1.1.0
   cupertino_icons: ^1.0.2
   curved_navigation_bar: ^1.0.3
+  dio: ^4.0.6
   flutter:
     sdk: flutter
   intl: ^0.17.0
+  json_annotation: ^4.7.0
+  json_serializable: ^6.5.0
   provider: ^6.0.3
   scroll_snap_list: ^0.9.1
 
 dev_dependencies:
+  build_runner: ^2.2.1
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
