--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.library_api_mvvm">
    <application
-        android:label="library_api_mvvm"
+        android:label="Delopus Books"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
