--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,11 +29,11 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  # audioplayers: ^1.1.0
   cupertino_icons: ^1.0.2
   curved_navigation_bar: ^1.0.3
   flutter:
     sdk: flutter
+  http: ^0.13.5
   json_annotation: ^4.7.0
   json_serializable: ^6.5.0
   provider: ^6.0.3
